[package]
name = "shared"
version = "0.1.0"
authors = ["Dan Bruder <danb@structionsite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
once_cell = "1.4.0"
serde = "1.0.114"
tokio = {version = "0.2.21", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
